// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normalize Trades Service groupTradesByTicker groups trades by ticker 1`] = `
{
  "APPL": [
    {
      "commission": 1.73,
      "currency": "USD",
      "date": "2021-06-10 18:41:12",
      "operation": "buy",
      "price": 10.65,
      "quantity": 10,
      "ticker": "APPL",
    },
  ],
  "FIPO": [
    {
      "commission": 2.31,
      "currency": "USD",
      "date": "2021-06-07 11:48:21",
      "operation": "buy",
      "price": 35.53,
      "quantity": 13,
      "ticker": "FIPO",
    },
    {
      "commission": 2.31,
      "currency": "USD",
      "date": "2021-06-07 11:48:21",
      "operation": "buy",
      "price": 35.53,
      "quantity": 13,
      "ticker": "FIPO",
    },
    {
      "commission": 2.31,
      "currency": "USD",
      "date": "2021-06-07 11:48:21",
      "operation": "sell",
      "price": 35.53,
      "quantity": 26,
      "ticker": "FIPO",
    },
  ],
  "GOOGL": [
    {
      "commission": 1.73,
      "currency": "sell",
      "date": "2021-06-10 18:41:12",
      "operation": "sell",
      "price": 10.65,
      "quantity": 10,
      "ticker": "GOOGL",
    },
    {
      "commission": 1.73,
      "currency": "sell",
      "date": "2021-06-11 18:41:12",
      "operation": "buy",
      "price": 10.65,
      "quantity": 10,
      "ticker": "GOOGL",
    },
  ],
  "MNDY_IPO": [
    {
      "commission": 7.75,
      "currency": "USD",
      "date": "2021-06-10 14:06:17",
      "operation": "buy",
      "price": 155,
      "quantity": 1,
      "ticker": "MNDY_IPO",
    },
    {
      "commission": 7.75,
      "currency": "USD",
      "date": "2021-07-10 14:06:17",
      "operation": "buy",
      "price": 156,
      "quantity": 3,
      "ticker": "MNDY_IPO",
    },
    {
      "commission": 7.75,
      "currency": "sell",
      "date": "2021-10-10 14:06:17",
      "operation": "sell",
      "price": 155,
      "quantity": 3,
      "ticker": "MNDY_IPO",
    },
    {
      "commission": 7.75,
      "currency": "sell",
      "date": "2021-11-10 14:06:17",
      "operation": "sell",
      "price": 155,
      "quantity": 1,
      "ticker": "MNDY_IPO",
    },
  ],
  "RIDE": [
    {
      "commission": 1.73,
      "currency": "USD",
      "date": "2021-06-10 18:41:12",
      "operation": "buy",
      "price": 10.65,
      "quantity": 10,
      "ticker": "RIDE",
    },
    {
      "commission": 1.73,
      "currency": "sell",
      "date": "2021-06-10 18:41:12",
      "operation": "sell",
      "price": 10.65,
      "quantity": 12,
      "ticker": "RIDE",
    },
    {
      "commission": 1.73,
      "currency": "sell",
      "date": "2021-06-10 18:41:12",
      "operation": "buy",
      "price": 10.65,
      "quantity": 2,
      "ticker": "RIDE",
    },
  ],
  "WISH": [
    {
      "commission": 1.75,
      "currency": "USD",
      "date": "2021-06-10 16:30:00",
      "operation": "buy",
      "price": 11.06,
      "quantity": 10,
      "ticker": "WISH",
    },
    {
      "commission": 1.75,
      "currency": "USD",
      "date": "2021-06-10 16:30:00",
      "operation": "sell",
      "price": 11.06,
      "quantity": 10,
      "ticker": "WISH",
    },
  ],
}
`;

exports[`Normalize Trades Service normalize trades returns trades converted to interface ITrade freedom finance trades 1`] = `
[
  {
    "commission": 2.31,
    "currency": "USD",
    "date": "2021-06-07 11:48:21",
    "operation": "buy",
    "price": 35.53,
    "quantity": 13,
    "ticker": "FIPO",
  },
  {
    "commission": 2.31,
    "currency": "USD",
    "date": "2021-06-07 11:48:21",
    "operation": "buy",
    "price": 35.53,
    "quantity": 13,
    "ticker": "FIPO",
  },
  {
    "commission": 2.31,
    "currency": "USD",
    "date": "2021-06-07 11:48:21",
    "operation": "sell",
    "price": 35.53,
    "quantity": 26,
    "ticker": "FIPO",
  },
  {
    "commission": 7.75,
    "currency": "USD",
    "date": "2021-06-10 14:06:17",
    "operation": "buy",
    "price": 155,
    "quantity": 1,
    "ticker": "MNDY_IPO",
  },
  {
    "commission": 7.75,
    "currency": "USD",
    "date": "2021-07-10 14:06:17",
    "operation": "buy",
    "price": 156,
    "quantity": 3,
    "ticker": "MNDY_IPO",
  },
  {
    "commission": 7.75,
    "currency": "sell",
    "date": "2021-10-10 14:06:17",
    "operation": "sell",
    "price": 155,
    "quantity": 3,
    "ticker": "MNDY_IPO",
  },
  {
    "commission": 7.75,
    "currency": "sell",
    "date": "2021-11-10 14:06:17",
    "operation": "sell",
    "price": 155,
    "quantity": 1,
    "ticker": "MNDY_IPO",
  },
  {
    "commission": 1.75,
    "currency": "USD",
    "date": "2021-06-10 16:30:00",
    "operation": "buy",
    "price": 11.06,
    "quantity": 10,
    "ticker": "WISH",
  },
  {
    "commission": 1.75,
    "currency": "USD",
    "date": "2021-06-10 16:30:00",
    "operation": "sell",
    "price": 11.06,
    "quantity": 10,
    "ticker": "WISH",
  },
  {
    "commission": 1.73,
    "currency": "USD",
    "date": "2021-06-10 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 10,
    "ticker": "RIDE",
  },
  {
    "commission": 1.73,
    "currency": "sell",
    "date": "2021-06-10 18:41:12",
    "operation": "sell",
    "price": 10.65,
    "quantity": 12,
    "ticker": "RIDE",
  },
  {
    "commission": 1.73,
    "currency": "sell",
    "date": "2021-06-10 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 2,
    "ticker": "RIDE",
  },
  {
    "commission": 1.73,
    "currency": "sell",
    "date": "2021-06-10 18:41:12",
    "operation": "sell",
    "price": 10.65,
    "quantity": 10,
    "ticker": "GOOGL",
  },
  {
    "commission": 1.73,
    "currency": "sell",
    "date": "2021-06-11 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 10,
    "ticker": "GOOGL",
  },
  {
    "commission": 1.73,
    "currency": "USD",
    "date": "2021-06-10 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 10,
    "ticker": "APPL",
  },
]
`;

exports[`Normalize Trades Service normalized freedom finance trades return trades converted to interface ITrade for IFreedomFinanceTrade 1`] = `
[
  {
    "commission": 1.73,
    "currency": "sell",
    "date": "2021-06-11 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 10,
    "ticker": "GOOGL",
  },
  {
    "commission": 1.73,
    "currency": "USD",
    "date": "2021-06-10 18:41:12",
    "operation": "buy",
    "price": 10.65,
    "quantity": 10,
    "ticker": "APPL",
  },
]
`;
